--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="UTF-8">
+    <title>Galerie en ligne</title>
+    <link rel="stylesheet" href="styles.css">
+  </head>
   <body>
     <p>Hello World!</p>
   </body>
