--- a/index.html
+++ b/index.html
@@ -7,5 +7,12 @@
   </head>
   <body>
     <p>Hello World!</p>
+    <div id="container">
+      <div id="buche">
+        <div id="buche1"></div>
+        <div id="buche2"></div>
+        <div id="buche3"></div>
+      </div>
+    </div>
   </body>
 </html>
