--- a/index.html
+++ b/index.html
@@ -6,12 +6,17 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <p>Hello World!</p>
+    <h1>Bienvenue sur ma galerie d'art!</h1>
+    <h2>(Attention, contient de la 3d moche.)</h2>
+    <div id="annonce">
+      <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Comment gagner le PIB du Zimbabwe en une seconde! (Les marketeux le haissent)</a>
+    </div>
     <div id="container">
       <div id="buche">
-        <div id="buche1"></div>
-        <div id="buche2"></div>
-        <div id="buche3"></div>
+        <div class="buche buche1"></div>
+        <div class="buche buche2"></div>
+        <div class="buche buche3"></div>
+        <p id="txtbuche">La buche de noel! Circa 2021</p>
       </div>
     </div>
   </body>
