--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Bienvenue sur ma galerie d'art!</h1>
     <h2>(Attention, contient de la 3d moche.)</h2>
     <div id="annonce">
-      <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Comment gagner le PIB du Zimbabwe en une seconde! (Les marketeux le haissent)</a>
+      <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Comment gagner le PIB du Zimbabwe en une seconde! (Les marketeux me haissent)</a>
     </div>
     <div id="container">
       <div id="buche">
