--- a/index.html
+++ b/index.html
@@ -11,11 +11,17 @@
     <div id="annonce">
       <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Comment gagner le PIB du Zimbabwe en une seconde! (Les marketeux me haissent)</a>
     </div>
+    <div id="apropos">
+     <p>A propos de l'auteur:</p>
+     <p id="auteur">Grand amoureux des galettes-saucisses, l'auteur a dedie sa vie aux Zimbabwe en etant, 12 fois d"affiler, president et chef des armees de ce grand pays. Apres avoir inventer l'ecriture, il s'est penche sur un domaine d'etude plus serieux, les telemetres lasers. Ses recherches ont menees au char d'assault Bob Semple, le meilleur qui n'est jamais exister d'apres la presse specialisee. Il profite aujourd'hui de sa retraite a l'age venerable de 352 ans.</p>
+    </div>
     <div id="container">
       <div id="buche">
         <div class="buche buche1"></div>
         <div class="buche buche2"></div>
         <div class="buche buche3"></div>
+        <div class="buche terre"></div>
+        <div class="buche lune"></div>
         <p id="txtbuche">La buche de noel! Circa 2021</p>
       </div>
     </div>
