--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Galerie en ligne</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/png" src="lune.png">
   </head>
   <body>
     <h1>Bienvenue sur ma galerie d'art!</h1>
