--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
     <div id="apropos">
      <p>A propos de l'auteur:</p>
-     <p id="auteur">Grand amoureux des galettes-saucisses, l'auteur a dedie sa vie aux Zimbabwe en etant, 12 fois d"affiler, president et chef des armees de ce grand pays. Apres avoir inventer l'ecriture, il s'est penche sur un domaine d'etude plus serieux, les telemetres lasers. Ses recherches ont menees au char d'assault Bob Semple, le meilleur qui n'est jamais exister d'apres la presse specialisee. Il profite aujourd'hui de sa retraite a l'age venerable de 352 ans.</p>
+     <p id="auteur">Grand amoureux des galettes-saucisses, l'auteur a dedie sa vie aux Zimbabwe en etant, 12 fois d"affiler, president et chef des armees de ce grand pays. Apres avoir inventer l'ecriture, il s'est penche sur un domaine d'etude plus serieux, les telemetres lasers. Ses recherches ont mene au char d'assault Bob Semple, le meilleur qui n'ait jamais existe d'apres la presse specialisee. Il profite aujourd'hui de sa retraite a l'age venerable de 352 ans.</p>
     </div>
     <div id="container">
       <div id="buche">
