--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Comment gagner le PIB du Zimbabwe en une seconde! (Les marketeux me haissent)</a>
     </div>
     <div id="apropos">
-     <p>A propos de l'auteur:</p>
-     <p id="auteur">Grand amoureux des galettes-saucisses, l'auteur a dedie sa vie au Zimbabwe en etant, 12 fois d"affilee, president et chef des armees de ce grand pays. Apres avoir inventer l'ecriture, il s'est penche sur un domaine d'etude plus serieux, les telemetres lasers. Ses recherches ont mene au char d'assault Bob Semple, le meilleur qui n'ait jamais existe d'apres la presse specialisee. Il profite aujourd'hui de sa retraite a l'age venerable de 352 ans.</p>
+      <p>A propos de l'auteur:</p>
+      <p id="auteur">Grand amoureux des galettes-saucisses, l'auteur a dedie sa vie au Zimbabwe en etant, 12 fois d"affilee, president et chef des armees de ce grand pays. Apres avoir inventer l'ecriture, il s'est penche sur un domaine d'etude plus serieux, les telemetres lasers. Ses recherches ont mene au char d'assault Bob Semple, le meilleur qui n'ait jamais existe d'apres la presse specialisee. Il profite aujourd'hui de sa retraite a l'age venerable de 352 ans.</p>
     </div>
     <div id="container">
       <div id="buche">
@@ -25,6 +25,14 @@
         <div class="buche lune"></div>
         <p id="txtbuche">La buche de noel! Circa 2021</p>
       </div>
+    </div>
+    <div id="doonut" class="prod">
+      <img src="doonut.jpg" alt="Vive les galettes-saucisses!" width="800" height="800">
+      <p>Un doonut comme on les aime (en 2022)</p>
+    </div>
+    <div id="peintre" class="prod">
+      <img src="peintre.jpg" alt="Vive les galettes-saucisses!" width="800" height="800">
+      <p>C'est peut etre Jamy... (16/02/2022)</p>
     </div>
   </body>
 </html>
