--- a/index.html
+++ b/index.html
@@ -34,5 +34,9 @@
       <img src="peintre.jpg" alt="Vive les galettes-saucisses!" width="800" height="800">
       <p>C'est peut etre Jamy... (16/02/2022)</p>
     </div>
+    <div id="livre" class="prod">
+      <img src="fonctions.png" alt="Vive les galettes-saucisses!" width="800" height="800">
+      <p></p>
+    </div>
   </body>
 </html>
